[gd_scene load_steps=11 format=3 uid="uid://lkhf6v8nu6on"]

[ext_resource type="Material" uid="uid://n1t1u7bnnvsb" path="res://materials/hit_mark_pass.tres" id="2_hcebm"]
[ext_resource type="Script" path="res://scripts/tank.gd" id="2_l5q2k"]
[ext_resource type="PackedScene" uid="uid://bwjhi2cp6nolr" path="res://raw/tank.blend" id="2_qb16o"]
[ext_resource type="AudioStream" uid="uid://b1nfxhworlww4" path="res://raw/318969__dewaholic__kick-hard-8-bit.wav" id="4_nu8y4"]

[sub_resource type="BoxShape3D" id="BoxShape3D_jja8s"]
size = Vector3(8.53875, 5.55799, 7.4187)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_0es3b"]
resource_local_to_scene = true
next_pass = ExtResource("2_hcebm")
albedo_color = Color(0, 0.615686, 0.627451, 1)
metallic = 0.75

[sub_resource type="Curve" id="Curve_vacpf"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.212963, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_d6r3c"]
curve = SubResource("Curve_vacpf")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_mg3pk"]
direction = Vector3(0, 0, 1)
spread = 90.75
gravity = Vector3(0, 0, 0)
initial_velocity_min = 14.58
initial_velocity_max = 14.58
scale_curve = SubResource("CurveTexture_d6r3c")

[sub_resource type="SphereMesh" id="SphereMesh_8rnu5"]

[node name="tank" type="CharacterBody3D" groups=["enemy"]]
script = ExtResource("2_l5q2k")

[node name="main_collision" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.79814, -0.182171)
shape = SubResource("BoxShape3D_jja8s")

[node name="Area3D" type="Area3D" parent="."]

[node name="attack_collision" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.79814, -0.182171)
shape = SubResource("BoxShape3D_jja8s")

[node name="tank" parent="." instance=ExtResource("2_qb16o")]

[node name="chassis" parent="tank" index="0"]
surface_material_override/0 = SubResource("StandardMaterial3D_0es3b")

[node name="bullet_start" type="Node3D" parent="tank/gun" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.19209e-06, -6.19687)

[node name="muzzle" type="GPUParticles3D" parent="tank/gun/bullet_start"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)
emitting = false
amount = 20
one_shot = true
speed_scale = 2.07
explosiveness = 1.0
process_material = SubResource("ParticleProcessMaterial_mg3pk")
draw_pass_1 = SubResource("SphereMesh_8rnu5")

[node name="shoot_sound" type="AudioStreamPlayer3D" parent="tank/gun/bullet_start"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0876465, 0.0810337)
stream = ExtResource("4_nu8y4")
volume_db = -7.234
unit_size = 100.0
max_db = -4.101
pitch_scale = 5.0

[editable path="tank"]
